Moved chart into usercontrol on main window

--- a/WpfViewer/WpfViewer.csproj
+++ b/WpfViewer/WpfViewer.csproj
@@ -61,6 +61,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Views\ChartControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\ChartWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -69,10 +73,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="ViewModels\ChartVM.cs" />
     <Compile Include="ViewModels\MainVM.cs" />
     <Compile Include="Views\App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Views\ChartControl.xaml.cs">
+      <DependentUpon>ChartControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ChartWindow.xaml.cs">
       <DependentUpon>ChartWindow.xaml</DependentUpon>
