--- a/DataClasses/DataClasses.csproj
+++ b/DataClasses/DataClasses.csproj
@@ -44,6 +44,7 @@
     <Compile Include="DailyReport.cs" />
     <Compile Include="DailyReports.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Replacement.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\CommonLibrary\CommonLibrary.csproj">
