Added two classes that faithfully follow the structure of the data files -- for reference, if nothing else

--- a/DataClasses/DataClasses.csproj
+++ b/DataClasses/DataClasses.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DailyFileData.cs" />
+    <Compile Include="DailyFileDataFips.cs" />
     <Compile Include="DailyReport.cs" />
     <Compile Include="DailyReports.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
