Added database project, database, and associated DatabaseConnection class; created Replacements class to replaced List<Replacement>; add database management to DailyReports; refactored MainVM to use ImportData() or ReadData();

--- a/DataClasses/DataClasses.csproj
+++ b/DataClasses/DataClasses.csproj
@@ -45,8 +45,10 @@
     <Compile Include="DailyFileDataFips.cs" />
     <Compile Include="DailyReport.cs" />
     <Compile Include="DailyReports.cs" />
+    <Compile Include="DatabaseConnection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Replacement.cs" />
+    <Compile Include="Replacements.cs" />
     <Compile Include="TotalReport.cs" />
   </ItemGroup>
   <ItemGroup>
