Renamed output and namespace from WpfViewer to VirusViewer;

--- a/WpfViewer/Viewer.csproj
+++ b/WpfViewer/Viewer.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{71A16F9B-D948-44E2-8C94-242A65E00CD4}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>WpfViewer</RootNamespace>
-    <AssemblyName>WpfViewer</AssemblyName>
+    <RootNamespace>VirusViewer</RootNamespace>
+    <AssemblyName>VirusViewer</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
