--- a/DataClasses/DataClasses.csproj
+++ b/DataClasses/DataClasses.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DailyReport.cs" />
-    <Compile Include="DailyReports.cs" />
+    <Compile Include="DatabaseManager.cs" />
     <Compile Include="DatabaseConnection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Replacement.cs" />
