--- a/DataClasses/DataClasses.csproj
+++ b/DataClasses/DataClasses.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Replacement.cs" />
     <Compile Include="Replacements.cs" />
+    <Compile Include="Selection.cs" />
     <Compile Include="TotalReport.cs" />
   </ItemGroup>
   <ItemGroup>
