Added in CountryStats class, table, data, and methods

--- a/DataClasses/DataClasses.csproj
+++ b/DataClasses/DataClasses.csproj
@@ -44,6 +44,7 @@
     <Compile Include="DailyReport.cs" />
     <Compile Include="DatabaseManager.cs" />
     <Compile Include="DatabaseConnection.cs" />
+    <Compile Include="CountryStats.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Replacement.cs" />
     <Compile Include="Replacements.cs" />
