--- a/WpfViewer/Viewer.csproj
+++ b/WpfViewer/Viewer.csproj
@@ -164,7 +164,10 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>COVID-19.mdf</DependentUpon>
     </Content>
-    <Compile Include="Views\AboutWindow.xaml.cs" />
+    <Compile Include="Views\AboutWindow.xaml.cs">
+      <DependentUpon>AboutWindow.xaml</DependentUpon>
+      <SubType>Code</SubType>
+	</Compile>
     <Compile Include="ViewModels\AboutVM.cs" />
     <Page Include="Views\AboutWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
