--- a/WpfViewer/Viewer.csproj
+++ b/WpfViewer/Viewer.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>VirusViewer</RootNamespace>
     <AssemblyName>VirusViewer</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -29,6 +29,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -146,6 +147,14 @@
     <ProjectReference Include="..\..\CommonLibrary\CommonLibrary.csproj">
       <Project>{67ac06dd-6d0d-425a-b3fe-43772719ad89}</Project>
       <Name>CommonLibrary</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\ServiceLibrary\ServiceLibrary.csproj">
+      <Project>{549b71cb-3411-41bf-ac9a-28c67635be74}</Project>
+      <Name>ServiceLibrary</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\WpfLibrary\WpfLibrary.csproj">
+      <Project>{598d5904-9ecd-4569-b6da-42d5e200b123}</Project>
+      <Name>WpfLibrary</Name>
     </ProjectReference>
     <ProjectReference Include="..\DataClasses\DataClasses.csproj">
       <Project>{37C5059B-8360-4C60-A40C-671B950261A9}</Project>
